src/test/resources/errors/todo/circular_dependency.jd
justification circular_dependency {

    conclusion c is "a conclusion"
    evidence Su1 is "Some evidence"
    strategy St1 is "A strategy"
    Su1 supports St1
    St1 supports c

    sub-conclusion SC1 is "An invalid conclusion"
    St1 supports SC1
    SC1 supports St1 // Circular dependency
}
